--- a/nextjs-app/styles/globals.css
+++ b/nextjs-app/styles/globals.css
@@ -6,11 +6,18 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+.flexcontainer {
+  display: flex;
+  background-color: red;
+ 
+}
 a {
   color: inherit;
   text-decoration: none;
 }
-
+.titles{
+  color : red;
+}
 * {
   box-sizing: border-box;
 }
